2012-06-05  Julien Bect  <julien.bect@supelec.fr>

	Fixing a bug related to the change of parameter ordering.

	* tests/test_Kx_cache.m: Changed the position of the 'model'
	parameter in several function calls.

2012-05-31  Julien Bect  <julien.bect@supelec.fr>

	Reorganizing folders.

	* misc/dist: New folder.
	* misc/dist/stk_mindist.c: Moved from sampling.
	* misc/dist/stk_distance_matrix.c: Moved from covfcs.
	* misc/config/stk_set_root.m: Added misc/dist to path.
	* misc/config/stk_compile_all.m: Changed paths.

2012-05-30  Julien Bect  <julien.bect@supelec.fr>

	Reorganizing folders.

	* paramestim: New folder.
	* paramestim/stk_param_estim.m: Moved from core.
	* paramestim/stk_remlqrg.m: idem.
	* misc: New name of the "old" utils folder.
	* misc/config/stk_set_root.m: Changed path.
	* utils: New name of the "old" utils/misc folder.
	* utils/stk_model.m: Moved to utils.
        * utils/stk_conditionning.m: idem.
        * utils/stk_generate_samplepaths.m: idem.
	* stk_init.m: Changed the location of stk_set_root.

	Miscellaneous changes.

	* sampling/stk_mindist.c: Fixed a comment.

2012-05-30  Emmanuel Vazquez <emmanuel.vazquez@supelec.fr>

	* almost-all-files: Changed the order of the arguments of the
	functions that use the structure 'model'. Now, 'model' is always
	the first argument. Because of this change, it seems better to
	make the argument 'param' in covariance functions coming in first
	position too.

2012-05-19  Julien Bect  <julien.bect@supelec.fr>

	Preparing headers for release 1.1.

	* almost-all-files: Updated headers (copyright, version).

	Miscellaneous changes.

	* core/stk_feval.m: Added optional argument 'progress_msg'.
	* utils/config/stk_select_optimizer.m: Minor change to avoid
	systematic checkinging which optimizer has to be used (as shown by
	the comments, this was a mistake...).
	* examples/example07.m: Fixed doc.

2012-05-02  Julien Bect  <julien.bect@supelec.fr>

	Improved compatibility with older versions of Matlab.
